[gd_scene load_steps=4 format=2]

[ext_resource path="res://levelselect/level_button.gd" type="Script" id=1]
[ext_resource path="res://pieces/polygon.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="level_button" type="Node2D"]
script = ExtResource( 1 )

[node name="selected" parent="." instance=ExtResource( 2 )]
visible = false
color = Color( 0.45098, 0.905882, 0.87451, 1 )
polygon = PoolVector2Array( 0, -64, -64, 0, 0, 64, 64, 0 )
radius = 72.0

[node name="polygon" parent="." instance=ExtResource( 2 )]
polygon = PoolVector2Array( 0, -64, -64, 0, 0, 64, 64, 0 )
radius = 64.0

[node name="rayU" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -72 )
enabled = true
cast_to = Vector2( 0, -256 )
collide_with_areas = true
collide_with_bodies = false

[node name="rayD" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 72 )
enabled = true
cast_to = Vector2( 0, 256 )
collide_with_areas = true
collide_with_bodies = false

[node name="rayL" type="RayCast2D" parent="."]
visible = false
position = Vector2( -72, 0 )
enabled = true
cast_to = Vector2( -256, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="rayR" type="RayCast2D" parent="."]
visible = false
position = Vector2( 72, 0 )
enabled = true
cast_to = Vector2( 256, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="area" type="Area2D" parent="."]
visible = false

[node name="hitbox" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )
